tests/ui/loops/issue-1962.stderr
error: denote infinite loops with `loop { ... }`
  --> $DIR/issue-1962.rs:6:5
   |
LL |     'a: while true {
   |     ^^^^^^^^^^^^^^
   |
   = note: requested on the command line with `-D while-true`
help: use `loop`
   |
LL |     'a: loop {
   |     ~~~~~~~~

error: aborting due to 1 previous error

